@@ -1,16 +1,24 @@
 package org.example.sharedprompts.module.domain.production.service.ai;
 
 import lombok.extern.slf4j.Slf4j;
+import org.example.sharedprompts.module.domain.production.service.ai.exception.UnsupportedContentTypeException;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 /**
  * AIService 레지스트리
  * 여러 AI 서비스를 등록하고 ContentType에 따라 적절한 서비스를 찾아 반환
+ * Thread-safe한 ConcurrentHashMap 사용
+ * 
+ * <p>서비스 등록 전략:
+ * <ul>
+ *   <li>동일 ContentType에 대해 첫 번째로 등록된 서비스만 사용 (putIfAbsent 사용)</li>
+ *   <li>Spring의 빈 주입 순서에 따라 서비스가 등록되므로, 우선순위가 필요한 경우 @Order 어노테이션 사용 권장</li>
+ *   <li>중복 등록 시도는 경고 로그로 기록되지만 덮어쓰지 않음</li>
+ * </ul>
  */
 @Component
 @Slf4j
@@ -20,13 +28,20 @@ public class AIServiceRegistry {
     
     public AIServiceRegistry(List<AIService> aiServices) {
         // 모든 AIService 구현체를 등록
+        // putIfAbsent를 사용하여 첫 번째로 등록된 서비스만 유지 (덮어쓰기 방지)
         for (AIService service : aiServices) {
-            ContentType supportedType = findSupportedType(service);
-            if (supportedType != null) {
-                serviceMap.put(supportedType, service);
-                log.info("Registered AIService: {} for ContentType: {}", 
-                        service.getClass().getSimpleName(), supportedType);
-            }
+            service.getSupportedContentType().ifPresentOrElse(supportedType -> {
+                AIService existing = serviceMap.putIfAbsent(supportedType, service);
+                if (existing != null) {
+                    log.warn("AIService for ContentType {} already registered: {}. Skipping: {}",
+                            supportedType, existing.getClass().getSimpleName(),
+                            service.getClass().getSimpleName());
+                } else {
+                    log.info("Registered AIService: {} for ContentType: {}", 
+                            service.getClass().getSimpleName(), supportedType);
+                }
+            }, () -> log.warn("AIService {} returned empty getSupportedContentType(); skipping registration.",
+                    service.getClass().getSimpleName()));
         }
     }
     
@@ -36,22 +51,9 @@ public class AIServiceRegistry {
     public AIService getService(ContentType contentType) {
         AIService service = serviceMap.get(contentType);
         if (service == null) {
-            throw new IllegalArgumentException(
-                    "No AIService found for ContentType: " + contentType);
+            throw new UnsupportedContentTypeException(contentType);
         }
         return service;
-    }
-    
-    /**
-     * 서비스가 지원하는 ContentType 찾기
-     */
-    private ContentType findSupportedType(AIService service) {
-        for (ContentType type : ContentType.values()) {
-            if (service.supports(type)) {
-                return type;
-            }
-        }
-        return null;
     }
     
     /**
@@ -60,7 +62,7 @@ public class AIServiceRegistry {
     public List<String> getRegisteredServices() {
         return serviceMap.entrySet().stream()
                 .map(entry -> entry.getKey() + " -> " + entry.getValue().getClass().getSimpleName())
-                .collect(Collectors.toList());
+                .toList();
     }
 }
 
